@@ -18,6 +18,7 @@ prop.progname=PROGNAME
 prop.servername=SERVERNAME
 prop.servertype=SERVERTYPE
 prop.tds=TDS
+prop.tcpnodelay=TCPNODELAY
 prop.user=USER
 prop.useunicode=SENDSTRINGPARAMETERSASUNICODE
 
@@ -41,6 +42,7 @@ prop.desc.progname=The program name advertised by the driver.
 prop.desc.servername=The database server hostname.
 prop.desc.servertype=The type of database (1 is SQL Server, 2 is Sybase).
 prop.desc.tds=The database server protocol.
+prop.desc.tcpnodelay=Enable/disable TCP_NODELAY
 prop.desc.user=The database user.
 prop.desc.useunicode=If strings should be sent as unicode values.
 
